delete all german comments and rename german named functions